@@ -6,6 +6,7 @@ import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
@@ -18,6 +19,7 @@ import tcatelie.microservice.auth.dto.request.*;
 import tcatelie.microservice.auth.dto.response.MaterialProdutoResponseDTO;
 import tcatelie.microservice.auth.dto.response.MercadoLivreProdutoResponseDTO;
 import tcatelie.microservice.auth.dto.response.ProdutoResponseDTO;
+import tcatelie.microservice.auth.dto.revison.ProdutoRevisaoResponseDTO;
 import tcatelie.microservice.auth.mapper.ImagensAdicionaisMapper;
 import tcatelie.microservice.auth.mapper.OpcaoPersonalizacaoMapper;
 import tcatelie.microservice.auth.mapper.PersonalizacaoMapper;
@@ -42,512 +44,575 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class ProdutoService {
 
-    private final ProdutoMapper mapper;
-    private final ImagensAdicionaisMapper imagensAdicionaisMapper;
-    private final PersonalizacaoMapper personalizacaoMapper;
-    private final OpcaoPersonalizacaoMapper opcaoPersonalizacaoMapper;
-    private final ProdutoRepository repository;
-    private final CategoriaService categoriaService;
-    private final SubcategoriaService subcategoriaService;
-    private final MaterialService materialService;
-    private final ImagensProdutoRepository imagensProdutoRepository;
-    private final PersonalizacaoRepository personalizacaoRepository;
-    private final OpcaoPersonalizacaoRepository opcaoPersonalizacaoRepository;
-    private final GoogleDriveApiService googleDriveApiService;
-    private final ProdutoObserver produtoObserver;
-    private final EmailService emailService;
+  private final ProdutoMapper mapper;
+  private final ImagensAdicionaisMapper imagensAdicionaisMapper;
+  private final PersonalizacaoMapper personalizacaoMapper;
+  private final OpcaoPersonalizacaoMapper opcaoPersonalizacaoMapper;
+  private final ProdutoRepository repository;
+  private final CategoriaService categoriaService;
+  private final SubcategoriaService subcategoriaService;
+  private final MaterialService materialService;
+  private final ImagensProdutoRepository imagensProdutoRepository;
+  private final PersonalizacaoRepository personalizacaoRepository;
+  private final OpcaoPersonalizacaoRepository opcaoPersonalizacaoRepository;
+  private final GoogleDriveApiService googleDriveApiService;
+  private final ProdutoObserver produtoObserver;
+  private final EmailService emailService;
+  private final CalculaPrecoService calculaPrecoService;
 
-    private static final Logger logger = LoggerFactory.getLogger(ProdutoService.class);
+  private static final Logger logger = LoggerFactory.getLogger(ProdutoService.class);
+  private final CustoOutrosService custoOutrosService;
 
-    public ProdutoResponseDTO cadastrarProduto(ProdutoRequestDTO requestDTO) {
-        validarRequest(requestDTO);
-        verificarExistencia(requestDTO.getNome(), requestDTO.getSku());
-        logger.info(requestDTO.toString());
+  public ProdutoResponseDTO cadastrarProduto(ProdutoRequestDTO requestDTO) {
+    validarRequest(requestDTO);
+    verificarExistencia(requestDTO.getNome(), requestDTO.getSku());
+    logger.info(requestDTO.toString());
 
-        Produto produto = criarProdutoComRelacoes(requestDTO);
-        produto.setProdutoAtivo(true);
-        Produto produtoSalvo = repository.save(produto);
+    Produto produto = criarProdutoComRelacoes(requestDTO);
+    produto.setProdutoAtivo(true);
+    produto.setPreco(calculaPrecoService.calcularPrecoProduto(produto));
 
+    Produto produtoSalvo = repository.save(produto);
 
-        Observer emailNotificacao = new EmailNotificacao("claudio.araujofo@sptech.school", emailService);
-        produtoObserver.addObserver(emailNotificacao);
+    Observer emailNotificacao = new EmailNotificacao("claudio.araujofo@sptech.school", emailService);
+    produtoObserver.addObserver(emailNotificacao);
 
-        produtoObserver.cadastrarProduto("Um novo produto foi cadastrado com sucesso.", produtoSalvo);
+    produtoObserver.cadastrarProduto("Um novo produto foi cadastrado com sucesso.", produtoSalvo);
 
-        return montarProdutoResponseDTO(produtoSalvo, requestDTO.getMateriais());
+    return montarProdutoResponseDTO(produtoSalvo, requestDTO.getMateriais());
+  }
+
+  private void validarRequest(ProdutoRequestDTO requestDTO) {
+    if (requestDTO == null)
+      throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "O corpo da requisição não foi informado");
+  }
+
+  private void verificarExistencia(String nome, String sku) {
+    if (repository.existsByNome(nome))
+      throw new ResponseStatusException(HttpStatus.CONFLICT, "Produto já cadastrado com esse nome.");
+    if (repository.existsBySku(sku))
+      throw new ResponseStatusException(HttpStatus.CONFLICT, "Produto já cadastrado com esse sku.");
+  }
+
+  private Produto criarProdutoComRelacoes(ProdutoRequestDTO requestDTO) {
+    Categoria categoria = categoriaService.findByNome(requestDTO.getCategoria().getNome());
+    Subcategoria subcategoria = subcategoriaService.findByNome(requestDTO.getSubcategoria().getNomeSubcategoria());
+    List<Material> materiais = obterMateriais(requestDTO.getMateriais());
+
+    Produto produto = mapper.toProduto(requestDTO);
+    produto.setCategoria(categoria);
+    produto.setSubcategoria(subcategoria);
+    produto.setImagensAdicionais(requestDTO.getImagensAdicionais().stream()
+            .map(img -> new ImagensProduto(img.getUrl())).collect(Collectors.toList()));
+    produto.setMateriaisProduto(montarMateriaisProduto(requestDTO.getMateriais(), materiais, produto));
+
+    List<Personalizacao> listaPersonalizacoes = requestDTO.getPersonalizacoes().stream()
+            .map(personalizacaoMapper::toPersonalizacaoWithOpcoes)
+            .collect(Collectors.toList());
+
+    listaPersonalizacoes.forEach(p -> {
+      p.setProduto(produto);
+      p.getOpcoes().forEach(o -> o.setPersonalizacao(p));
+    });
+
+    produto.setPersonalizacoes(listaPersonalizacoes);
+    produto.setPersonalizacaoObrigatoria(requestDTO.getIsPersonalizacaoObrigatoria());
+
+    produto.getImagensAdicionais().forEach(img -> img.setProduto(produto));
+    return produto;
+  }
+
+  private List<Material> obterMateriais(List<MaterialProdutoRequestDTO> materialRequests) {
+    return materialRequests.stream()
+            .map(m -> materialService.findById(m.getIdMaterial()))
+            .collect(Collectors.toList());
+  }
+
+  private List<MaterialProduto> montarMateriaisProduto(List<MaterialProdutoRequestDTO> materialRequests, List<Material> materiais, Produto produto) {
+    return materialRequests.stream()
+            .map(m -> new MaterialProduto(materiais.stream()
+                    .filter(mat -> mat.getIdMaterial().equals(m.getIdMaterial()))
+                    .findFirst()
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Material não encontrado com ID: " + m.getIdMaterial())),
+                    produto, m.getQtdMaterialNecessaria()))
+            .collect(Collectors.toList());
+  }
+
+  private ProdutoResponseDTO montarProdutoResponseDTO(Produto produto, List<MaterialProdutoRequestDTO> materialRequests) {
+    ProdutoResponseDTO produtoResponseDTO = mapper.toResponseDTO(produto);
+    List<MaterialProdutoResponseDTO> materiais = produto.getMateriaisProduto().stream()
+            .map(mp -> criarMaterialProdutoResponseDTO(mp.getMaterial(), materialRequests))
+            .collect(Collectors.toList());
+    produtoResponseDTO.setMateriais(materiais);
+    produtoResponseDTO.setPrecoProducao(calcularPrecoTotalProducao(materiais));
+    return produtoResponseDTO;
+  }
+
+  private MaterialProdutoResponseDTO criarMaterialProdutoResponseDTO(Material material, List<MaterialProdutoRequestDTO> materialRequests) {
+    if (materialRequests == null || materialRequests.isEmpty()) {
+      throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Lista de materialRequests não pode estar vazia ou nula.");
     }
 
-    private void validarRequest(ProdutoRequestDTO requestDTO) {
-        if (requestDTO == null)
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "O corpo da requisição não foi informado");
+    MaterialProdutoRequestDTO request = materialRequests.stream()
+            .filter(req -> req.getIdMaterial().equals(material.getIdMaterial()))
+            .findFirst()
+            .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Material não encontrado com ID: " + material.getIdMaterial()));
+
+    double custoProducao = request.getQtdMaterialNecessaria() * material.getPrecoUnitario();
+    return new MaterialProdutoResponseDTO(
+            request.getQtdMaterialNecessaria(),
+            custoProducao,
+            material.getIdMaterial(),
+            material.getNomeMaterial(),
+            material.getEstoque(),
+            material.getPrecoUnitario()
+    );
+  }
+
+  private double calcularPrecoTotalProducao(List<MaterialProdutoResponseDTO> materiais) {
+    return materiais.stream().mapToDouble(MaterialProdutoResponseDTO::getCustoProducao).sum();
+  }
+
+  public ProdutoResponseDTO buscarProdutoPorId(Integer id) {
+    Produto produto = repository.findById(id)
+            .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Produto não encontrado com o ID: " + id));
+
+    produto.setPersonalizacoes(produto.getPersonalizacoes().stream()
+            .filter(Personalizacao::getPersonalizacaoAtiva)
+            .collect(Collectors.toList()));
+
+    return montarProdutoResponseDTO(produto, produto.getMateriaisProduto().stream()
+            .map(mp -> new MaterialProdutoRequestDTO(mp.getMaterial().getIdMaterial(), mp.getQtdMaterialNecessario()))
+            .collect(Collectors.toList()));
+  }
+
+
+  public Page<ProdutoResponseDTO> buscarTodosProdutosPaginados(Pageable pageable, ProdutoFiltroDTO produtoFiltroDTO) {
+    Page<Produto> produtos = repository.findAll(ProdutoSpecification.filtrar(produtoFiltroDTO), pageable);
+
+    return produtos.map(produto ->
+            montarProdutoResponseDTO(produto, produto.getMateriaisProduto().stream()
+                    .map(mp -> new MaterialProdutoRequestDTO(mp.getMaterial().getIdMaterial(), mp.getQtdMaterialNecessario()))
+                    .collect(Collectors.toList()))
+    );
+  }
+
+  public ProdutoResponseDTO atualizarProduto(Integer idProduto, ProdutoRequestDTO requestDTO) throws IOException {
+    Produto produtoExistente = repository.findById(idProduto)
+            .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Produto não encontrado com o ID: " + idProduto));
+
+    validarRequest(requestDTO);
+
+    if (repository.findByNomeAndIdNot(requestDTO.getNome(), idProduto).isPresent()) {
+      throw new ResponseStatusException(HttpStatus.CONFLICT, "Produto já cadastrado com esse nome.");
+    }
+    if (repository.findBySkuAndIdNot(requestDTO.getSku(), idProduto).isPresent()) {
+      throw new ResponseStatusException(HttpStatus.CONFLICT, "Produto já cadastrado com esse sku.");
     }
 
-    private void verificarExistencia(String nome, String sku) {
-        if (repository.existsByNome(nome))
-            throw new ResponseStatusException(HttpStatus.CONFLICT, "Produto já cadastrado com esse nome.");
-        if (repository.existsBySku(sku))
-            throw new ResponseStatusException(HttpStatus.CONFLICT, "Produto já cadastrado com esse sku.");
+    List<String> filesIds = new ArrayList<>();
+
+    produtoExistente.setNome(requestDTO.getNome());
+    produtoExistente.setDescricao(requestDTO.getDescricao());
+    produtoExistente.setSku(requestDTO.getSku());
+    produtoExistente.setDesconto(requestDTO.getDesconto());
+    produtoExistente.setMargemLucro(requestDTO.getMargemLucro());
+    produtoExistente.setPersonalizavel(requestDTO.getIsPersonalizavel());
+    produtoExistente.setDimensao(requestDTO.getDimensao());
+    produtoExistente.setPeso(requestDTO.getPeso());
+    produtoExistente.setPersonalizacaoObrigatoria(requestDTO.getIsPersonalizacaoObrigatoria());
+
+    if (!produtoExistente.getUrlImagemPrincipal().equals(requestDTO.getUrlProduto())) {
+      filesIds.add(produtoExistente.getIdImgDrive());
+      produtoExistente.setUrlImagemPrincipal(requestDTO.getUrlProduto());
     }
 
-    private Produto criarProdutoComRelacoes(ProdutoRequestDTO requestDTO) {
-        Categoria categoria = categoriaService.findByNome(requestDTO.getCategoria().getNome());
-        Subcategoria subcategoria = subcategoriaService.findByNome(requestDTO.getSubcategoria().getNomeSubcategoria());
-        List<Material> materiais = obterMateriais(requestDTO.getMateriais());
+    Categoria categoria = categoriaService.findByNome(requestDTO.getCategoria().getNome());
+    Subcategoria subcategoria = subcategoriaService.findByNome(requestDTO.getSubcategoria().getNomeSubcategoria());
 
-        Produto produto = mapper.toProduto(requestDTO);
-        produto.setCategoria(categoria);
-        produto.setSubcategoria(subcategoria);
-        produto.setImagensAdicionais(requestDTO.getImagensAdicionais().stream()
-                .map(img -> new ImagensProduto(img.getUrl())).collect(Collectors.toList()));
-        produto.setMateriaisProduto(montarMateriaisProduto(requestDTO.getMateriais(), materiais, produto));
+    produtoExistente.setCategoria(categoria);
+    produtoExistente.setSubcategoria(subcategoria);
 
-        List<Personalizacao> listaPersonalizacoes = requestDTO.getPersonalizacoes().stream()
-                .map(personalizacaoMapper::toPersonalizacaoWithOpcoes)
-                .collect(Collectors.toList());
 
-        listaPersonalizacoes.forEach(p -> {
-            p.setProduto(produto);
-            p.getOpcoes().forEach(o -> o.setPersonalizacao(p));
+    List<ImagensProduto> imagensExistentes = produtoExistente.getImagensAdicionais();
+    List<ImagensProduto> imagensRecebidas = requestDTO.getImagensAdicionais().stream()
+            .map(imagensAdicionaisMapper::toModel)
+            .collect(Collectors.toList());
+
+    List<ImagensProduto> imagensParaRemover = imagensExistentes.stream()
+            .filter(imgExistente -> imagensRecebidas.stream()
+                    .noneMatch(imgRecebida -> imgRecebida.getIdImagem() != null
+                            && imgRecebida.getIdImagem().equals(imgExistente.getIdImagem())))
+            .collect(Collectors.toList());
+
+    imagensParaRemover.stream().forEach(img -> filesIds.add(img.getIdImgDrive()));
+
+    produtoExistente.getImagensAdicionais().removeIf(img ->
+            imagensParaRemover.stream().anyMatch(i -> i.getIdImagem().equals(img.getIdImagem())));
+
+    imagensRecebidas.forEach(img -> {
+      if (img.getIdImagem() == null) {
+        img.setProduto(produtoExistente);
+        produtoExistente.getImagensAdicionais().add(img);
+      }
+    });
+
+    List<Personalizacao> personalizacoesExistentes = produtoExistente.getPersonalizacoes();
+    List<Personalizacao> personalizacoesRecebidas = requestDTO.getPersonalizacoes().stream()
+            .map(personalizacaoMapper::toPersonalizacaoWithOpcoes)
+            .collect(Collectors.toList());
+
+    personalizacoesExistentes.forEach(pExistente -> {
+      boolean aindaAtiva = personalizacoesRecebidas.stream()
+              .anyMatch(pRecebida -> pRecebida.getIdPersonalizacao() != null
+                      && pRecebida.getIdPersonalizacao().equals(pExistente.getIdPersonalizacao()));
+      pExistente.setPersonalizacaoAtiva(aindaAtiva);
+    });
+
+    personalizacoesRecebidas.forEach(p -> {
+      if (p.getIdPersonalizacao() == null) {
+        p.setProduto(produtoExistente);
+        p.setPersonalizacaoAtiva(true);
+        produtoExistente.getPersonalizacoes().add(p);
+      } else {
+        Personalizacao personalizacaoExistente = personalizacaoRepository.findById(p.getIdPersonalizacao())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Personalização não encontrada com ID: " + p.getIdPersonalizacao()));
+
+        personalizacaoExistente.setNomePersonalizacao(p.getNomePersonalizacao());
+        personalizacaoExistente.setTipoPersonalizacao(p.getTipoPersonalizacao());
+        personalizacaoExistente.setPersonalizacaoAtiva(true);
+
+        List<OpcaoPersonalizacao> opcoesExistentes = personalizacaoExistente.getOpcoes();
+        List<OpcaoPersonalizacao> opcoesRecebidas = p.getOpcoes();
+
+        opcoesExistentes.forEach(oExistente -> {
+          boolean opcaoAindaAtiva = opcoesRecebidas.stream()
+                  .anyMatch(oRecebida -> oRecebida.getIdOpcaoPersonalizacao() != null
+                          && oRecebida.getIdOpcaoPersonalizacao().equals(oExistente.getIdOpcaoPersonalizacao()));
+          if (!opcaoAindaAtiva) {
+            filesIds.add(oExistente.getIdImgDrive());
+          }
         });
+        opcoesExistentes.removeIf(o -> opcoesRecebidas.stream()
+                .noneMatch(oRecebida -> oRecebida.getIdOpcaoPersonalizacao() != null
+                        && oRecebida.getIdOpcaoPersonalizacao().equals(o.getIdOpcaoPersonalizacao())));
 
-        produto.setPersonalizacoes(listaPersonalizacoes);
-        produto.setPersonalizacaoObrigatoria(requestDTO.getIsPersonalizacaoObrigatoria());
+        opcoesRecebidas.forEach(o -> {
+          if (o.getIdOpcaoPersonalizacao() == null) {
+            personalizacaoExistente.getOpcoes().add(o);
+          } else {
+            OpcaoPersonalizacao opcaoExistente = opcoesExistentes.stream()
+                    .filter(op -> op.getIdOpcaoPersonalizacao().equals(o.getIdOpcaoPersonalizacao()))
+                    .findFirst()
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Opção de personalização não encontrada com ID: " + o.getIdOpcaoPersonalizacao()));
 
-        produto.getImagensAdicionais().forEach(img -> img.setProduto(produto));
-        return produto;
-    }
-
-    private List<Material> obterMateriais(List<MaterialProdutoRequestDTO> materialRequests) {
-        return materialRequests.stream()
-                .map(m -> materialService.findById(m.getIdMaterial()))
-                .collect(Collectors.toList());
-    }
-
-    private List<MaterialProduto> montarMateriaisProduto(List<MaterialProdutoRequestDTO> materialRequests, List<Material> materiais, Produto produto) {
-        return materialRequests.stream()
-                .map(m -> new MaterialProduto(materiais.stream()
-                        .filter(mat -> mat.getIdMaterial().equals(m.getIdMaterial()))
-                        .findFirst()
-                        .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Material não encontrado com ID: " + m.getIdMaterial())),
-                        produto, m.getQtdMaterialNecessaria()))
-                .collect(Collectors.toList());
-    }
-
-    private ProdutoResponseDTO montarProdutoResponseDTO(Produto produto, List<MaterialProdutoRequestDTO> materialRequests) {
-        ProdutoResponseDTO produtoResponseDTO = mapper.toResponseDTO(produto);
-        List<MaterialProdutoResponseDTO> materiais = produto.getMateriaisProduto().stream()
-                .map(mp -> criarMaterialProdutoResponseDTO(mp.getMaterial(), materialRequests))
-                .collect(Collectors.toList());
-        produtoResponseDTO.setMateriais(materiais);
-        produtoResponseDTO.setPrecoProducao(calcularPrecoTotalProducao(materiais));
-        return produtoResponseDTO;
-    }
-
-    private MaterialProdutoResponseDTO criarMaterialProdutoResponseDTO(Material material, List<MaterialProdutoRequestDTO> materialRequests) {
-        if (materialRequests == null || materialRequests.isEmpty()) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Lista de materialRequests não pode estar vazia ou nula.");
-        }
-
-        MaterialProdutoRequestDTO request = materialRequests.stream()
-                .filter(req -> req.getIdMaterial().equals(material.getIdMaterial()))
-                .findFirst()
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Material não encontrado com ID: " + material.getIdMaterial()));
-
-        double custoProducao = request.getQtdMaterialNecessaria() * material.getPrecoUnitario();
-        return new MaterialProdutoResponseDTO(
-                request.getQtdMaterialNecessaria(),
-                custoProducao,
-                material.getIdMaterial(),
-                material.getNomeMaterial(),
-                material.getEstoque(),
-                material.getPrecoUnitario()
-        );
-    }
-
-    private double calcularPrecoTotalProducao(List<MaterialProdutoResponseDTO> materiais) {
-        return materiais.stream().mapToDouble(MaterialProdutoResponseDTO::getCustoProducao).sum();
-    }
-
-    public ProdutoResponseDTO buscarProdutoPorId(Integer id) {
-        Produto produto = repository.findById(id)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Produto não encontrado com o ID: " + id));
-
-        produto.setPersonalizacoes(produto.getPersonalizacoes().stream()
-                .filter(Personalizacao::getPersonalizacaoAtiva)
-                .collect(Collectors.toList()));
-
-        return montarProdutoResponseDTO(produto, produto.getMateriaisProduto().stream()
-                .map(mp -> new MaterialProdutoRequestDTO(mp.getMaterial().getIdMaterial(), mp.getQtdMaterialNecessario()))
-                .collect(Collectors.toList()));
-    }
-
-
-    public Page<ProdutoResponseDTO> buscarTodosProdutosPaginados(Pageable pageable, ProdutoFiltroDTO produtoFiltroDTO) {
-        Page<Produto> produtos = repository.findAll(ProdutoSpecification.filtrar(produtoFiltroDTO), pageable);
-
-        return produtos.map(produto ->
-                montarProdutoResponseDTO(produto, produto.getMateriaisProduto().stream()
-                        .map(mp -> new MaterialProdutoRequestDTO(mp.getMaterial().getIdMaterial(), mp.getQtdMaterialNecessario()))
-                        .collect(Collectors.toList()))
-        );
-    }
-
-    public ProdutoResponseDTO atualizarProduto(Integer idProduto, ProdutoRequestDTO requestDTO) throws IOException {
-        Produto produtoExistente = repository.findById(idProduto)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Produto não encontrado com o ID: " + idProduto));
-
-        validarRequest(requestDTO);
-
-        if (repository.findByNomeAndIdNot(requestDTO.getNome(), idProduto).isPresent()) {
-            throw new ResponseStatusException(HttpStatus.CONFLICT, "Produto já cadastrado com esse nome.");
-        }
-        if (repository.findBySkuAndIdNot(requestDTO.getSku(), idProduto).isPresent()) {
-            throw new ResponseStatusException(HttpStatus.CONFLICT, "Produto já cadastrado com esse sku.");
-        }
-
-        List<String> filesIds = new ArrayList<>();
-
-        produtoExistente.setNome(requestDTO.getNome());
-        produtoExistente.setDescricao(requestDTO.getDescricao());
-        produtoExistente.setSku(requestDTO.getSku());
-        produtoExistente.setPreco(requestDTO.getPrecoVenda());
-        produtoExistente.setDesconto(requestDTO.getDesconto());
-        produtoExistente.setMargemLucro(requestDTO.getMargemLucro());
-        produtoExistente.setPersonalizavel(requestDTO.getIsPersonalizavel());
-        produtoExistente.setDimensao(requestDTO.getDimensao());
-        produtoExistente.setPeso(requestDTO.getPeso());
-        produtoExistente.setPersonalizacaoObrigatoria(requestDTO.getIsPersonalizacaoObrigatoria());
-
-        if (!produtoExistente.getUrlImagemPrincipal().equals(requestDTO.getUrlProduto())) {
-            filesIds.add(produtoExistente.getIdImgDrive());
-            produtoExistente.setUrlImagemPrincipal(requestDTO.getUrlProduto());
-        }
-
-        Categoria categoria = categoriaService.findByNome(requestDTO.getCategoria().getNome());
-        Subcategoria subcategoria = subcategoriaService.findByNome(requestDTO.getSubcategoria().getNomeSubcategoria());
-
-        produtoExistente.setCategoria(categoria);
-        produtoExistente.setSubcategoria(subcategoria);
-
-
-        List<ImagensProduto> imagensExistentes = produtoExistente.getImagensAdicionais();
-        List<ImagensProduto> imagensRecebidas = requestDTO.getImagensAdicionais().stream()
-                .map(imagensAdicionaisMapper::toModel)
-                .collect(Collectors.toList());
-
-        List<ImagensProduto> imagensParaRemover = imagensExistentes.stream()
-                .filter(imgExistente -> imagensRecebidas.stream()
-                        .noneMatch(imgRecebida -> imgRecebida.getIdImagem() != null
-                                && imgRecebida.getIdImagem().equals(imgExistente.getIdImagem())))
-                .collect(Collectors.toList());
-
-        imagensParaRemover.stream().forEach(img -> filesIds.add(img.getIdImgDrive()));
-
-        produtoExistente.getImagensAdicionais().removeIf(img ->
-                imagensParaRemover.stream().anyMatch(i -> i.getIdImagem().equals(img.getIdImagem())));
-
-        imagensRecebidas.forEach(img -> {
-            if (img.getIdImagem() == null) {
-                img.setProduto(produtoExistente);
-                produtoExistente.getImagensAdicionais().add(img);
-            }
+            opcaoExistente.setNomeOpcao(o.getNomeOpcao());
+            opcaoExistente.setDescricao(o.getDescricao());
+            opcaoExistente.setUrlImagemOpcao(o.getUrlImagemOpcao());
+            opcaoExistente.setAcrescimoOpcao(o.getAcrescimoOpcao());
+          }
         });
-
-        List<Personalizacao> personalizacoesExistentes = produtoExistente.getPersonalizacoes();
-        List<Personalizacao> personalizacoesRecebidas = requestDTO.getPersonalizacoes().stream()
-                .map(personalizacaoMapper::toPersonalizacaoWithOpcoes)
-                .collect(Collectors.toList());
-
-        personalizacoesExistentes.forEach(pExistente -> {
-            boolean aindaAtiva = personalizacoesRecebidas.stream()
-                    .anyMatch(pRecebida -> pRecebida.getIdPersonalizacao() != null
-                            && pRecebida.getIdPersonalizacao().equals(pExistente.getIdPersonalizacao()));
-            pExistente.setPersonalizacaoAtiva(aindaAtiva);
-        });
-
-        personalizacoesRecebidas.forEach(p -> {
-            if (p.getIdPersonalizacao() == null) {
-                p.setProduto(produtoExistente);
-                p.setPersonalizacaoAtiva(true);
-                produtoExistente.getPersonalizacoes().add(p);
-            } else {
-                Personalizacao personalizacaoExistente = personalizacaoRepository.findById(p.getIdPersonalizacao())
-                        .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Personalização não encontrada com ID: " + p.getIdPersonalizacao()));
-
-                personalizacaoExistente.setNomePersonalizacao(p.getNomePersonalizacao());
-                personalizacaoExistente.setTipoPersonalizacao(p.getTipoPersonalizacao());
-                personalizacaoExistente.setPersonalizacaoAtiva(true); // Certifica-se de que ela está ativa
-
-                List<OpcaoPersonalizacao> opcoesExistentes = personalizacaoExistente.getOpcoes();
-                List<OpcaoPersonalizacao> opcoesRecebidas = p.getOpcoes();
-
-                opcoesExistentes.forEach(oExistente -> {
-                    boolean opcaoAindaAtiva = opcoesRecebidas.stream()
-                            .anyMatch(oRecebida -> oRecebida.getIdOpcaoPersonalizacao() != null
-                                    && oRecebida.getIdOpcaoPersonalizacao().equals(oExistente.getIdOpcaoPersonalizacao()));
-                    if (!opcaoAindaAtiva) {
-                        filesIds.add(oExistente.getIdImgDrive());
-                    }
-                });
-                opcoesExistentes.removeIf(o -> opcoesRecebidas.stream()
-                        .noneMatch(oRecebida -> oRecebida.getIdOpcaoPersonalizacao() != null
-                                && oRecebida.getIdOpcaoPersonalizacao().equals(o.getIdOpcaoPersonalizacao())));
-
-                opcoesRecebidas.forEach(o -> {
-                    if (o.getIdOpcaoPersonalizacao() == null) {
-                        personalizacaoExistente.getOpcoes().add(o);
-                    } else {
-                        OpcaoPersonalizacao opcaoExistente = opcoesExistentes.stream()
-                                .filter(op -> op.getIdOpcaoPersonalizacao().equals(o.getIdOpcaoPersonalizacao()))
-                                .findFirst()
-                                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Opção de personalização não encontrada com ID: " + o.getIdOpcaoPersonalizacao()));
-
-                        opcaoExistente.setNomeOpcao(o.getNomeOpcao());
-                        opcaoExistente.setDescricao(o.getDescricao());
-                        opcaoExistente.setUrlImagemOpcao(o.getUrlImagemOpcao());
-                        opcaoExistente.setAcrescimoOpcao(o.getAcrescimoOpcao());
-                    }
-                });
-            }
-        });
+      }
+    });
 
 
-        atualizarMateriais(produtoExistente, requestDTO.getMateriais());
+    atualizarMateriais(produtoExistente, requestDTO.getMateriais());
 
-        Produto produtoAtualizado = repository.save(produtoExistente);
+    produtoExistente.setPreco(calculaPrecoService.calcularPrecoProduto(produtoExistente));
 
-        return montarProdutoResponseDTO(produtoAtualizado, requestDTO.getMateriais());
+    Produto produtoAtualizado = repository.save(produtoExistente);
+
+    return montarProdutoResponseDTO(produtoAtualizado, requestDTO.getMateriais());
+  }
+
+
+  private void atualizarMateriais(Produto produtoExistente, List<MaterialProdutoRequestDTO> materiaisRecebidos) {
+    List<MaterialProduto> materiaisExistentes = produtoExistente.getMateriaisProduto();
+
+    List<MaterialProduto> novosMateriaisProduto = materiaisRecebidos.stream()
+            .map(materialDTO -> {
+              Material material = materialService.findById(materialDTO.getIdMaterial());
+              return new MaterialProduto(material, produtoExistente, materialDTO.getQtdMaterialNecessaria());
+            })
+            .collect(Collectors.toList());
+
+    materiaisExistentes.removeIf(materialExistente ->
+            novosMateriaisProduto.stream()
+                    .noneMatch(novoMaterial -> novoMaterial
+                            .getMaterial()
+                            .getIdMaterial()
+                            .equals(materialExistente
+                                    .getMaterial()
+                                    .getIdMaterial()))
+    );
+
+    for (MaterialProduto novoMaterial : novosMateriaisProduto) {
+      Optional<MaterialProduto> existenteOpt = materiaisExistentes.stream()
+              .filter(existente -> existente.getMaterial().getIdMaterial().equals(novoMaterial.getMaterial().getIdMaterial()))
+              .findFirst();
+
+      if (existenteOpt.isPresent()) {
+        MaterialProduto existente = existenteOpt.get();
+        existente.setQtdMaterialNecessario(novoMaterial.getQtdMaterialNecessario());
+      } else {
+        produtoExistente.getMateriaisProduto().add(novoMaterial);
+      }
+    }
+  }
+
+  public ProdutoResponseDTO desativarProduto(Integer idProduto) {
+    Produto produto = repository.findById(idProduto)
+            .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Produto não encontrado com o ID: " + idProduto));
+    produto.setProdutoAtivo(false);
+    Produto produtoDesativado = repository.save(produto);
+    return montarProdutoResponseDTO(produtoDesativado, produto.getMateriaisProduto().stream()
+            .map(mp -> new MaterialProdutoRequestDTO(mp.getMaterial().getIdMaterial(), mp.getQtdMaterialNecessario()))
+            .collect(Collectors.toList()));
+  }
+
+  public MercadoLivreProdutoResponseDTO[] ordenarProdutosMercadoLivrePrecoDecrescente() throws Exception {
+    String urlApiExterna = "https://api.mercadolibre.com/sites/MLB/search?q=produtos-personalizados";
+
+    RestTemplate restTemplate = new RestTemplate();
+    ResponseEntity<String> response = restTemplate.getForEntity(urlApiExterna, String.class);
+
+    ObjectMapper mapper = new ObjectMapper();
+    JsonNode jsonResponse = mapper.readTree(response.getBody());
+
+    List<MercadoLivreProdutoResponseDTO> produtos = new ArrayList<>();
+
+    JsonNode resultsArray = jsonResponse.get("results");
+    if (resultsArray != null && resultsArray.isArray()) {
+      for (JsonNode produtoNode : resultsArray) {
+        MercadoLivreProdutoResponseDTO produto = new MercadoLivreProdutoResponseDTO();
+
+        produto.setId(produtoNode.get("id").asText());
+        produto.setTitle(produtoNode.get("title").asText());
+        produto.setCategoryId(produtoNode.get("category_id").asText());
+        produto.setCondition(produtoNode.get("condition").asText());
+        produto.setPrice(BigDecimal.valueOf(produtoNode.get("price").asDouble()));
+        produto.setCurrencyId(produtoNode.get("currency_id").asText());
+        produto.setThumbnail(produtoNode.get("thumbnail").asText());
+        produto.setPermalink(produtoNode.get("permalink").asText());
+        produto.setAvailableQuantity(produtoNode.get("available_quantity").asInt());
+
+        produtos.add(produto);
+      }
     }
 
-
-    private void atualizarMateriais(Produto produtoExistente, List<MaterialProdutoRequestDTO> materiaisRecebidos) {
-        List<MaterialProduto> materiaisExistentes = produtoExistente.getMateriaisProduto();
-
-        List<MaterialProduto> novosMateriaisProduto = materiaisRecebidos.stream()
-                .map(materialDTO -> {
-                    Material material = materialService.findById(materialDTO.getIdMaterial());
-                    return new MaterialProduto(material, produtoExistente, materialDTO.getQtdMaterialNecessaria());
-                })
-                .collect(Collectors.toList());
-
-        materiaisExistentes.removeIf(materialExistente ->
-                novosMateriaisProduto.stream()
-                        .noneMatch(novoMaterial -> novoMaterial
-                                .getMaterial()
-                                .getIdMaterial()
-                                .equals(materialExistente
-                                        .getMaterial()
-                                        .getIdMaterial()))
-        );
-
-        for (MaterialProduto novoMaterial : novosMateriaisProduto) {
-            Optional<MaterialProduto> existenteOpt = materiaisExistentes.stream()
-                    .filter(existente -> existente.getMaterial().getIdMaterial().equals(novoMaterial.getMaterial().getIdMaterial()))
-                    .findFirst();
-
-            if (existenteOpt.isPresent()) {
-                MaterialProduto existente = existenteOpt.get();
-                existente.setQtdMaterialNecessario(novoMaterial.getQtdMaterialNecessario());
-            } else {
-                produtoExistente.getMateriaisProduto().add(novoMaterial);
-            }
+    MercadoLivreProdutoResponseDTO[] v = new MercadoLivreProdutoResponseDTO[produtos.toArray().length];
+    produtos.toArray(v);
+    for (int i = 0; i < v.length - 1; i++) {
+      for (int j = i + 1; j < v.length; j++) {
+        if (v[j].getPrice().compareTo(v[i].getPrice()) == 1) {
+          MercadoLivreProdutoResponseDTO temp = v[i];
+          v[i] = v[j];
+          v[j] = temp;
         }
+      }
+    }
+    return v;
+  }
+
+  public void exportarCSVListaProdutos(String filePath) {
+    List<Produto> listaProdutos = repository.findAll();
+
+    FileWriter file = null;
+    Formatter saida = null;
+
+
+    try {
+      file = new FileWriter(filePath);
+      saida = new Formatter(file);
+
+      saida.format("%s;%s;%s;%s;%s;%s\n", "id", "nome", "preço", "dimensão", "categoria", "subcategoria");
+
+      for (Produto produto : listaProdutos) {
+        saida.format("%d;%s;%.2f;%s;%s;%s\n", produto.getId(), produto.getNome(), produto.getPreco(), produto.getDimensao(), produto.getCategoria().getNomeCategoria(), produto.getSubcategoria().getNomeSubcategoria());
+      }
+    } catch (Exception e) {
+      logger.error("Erro ao gravar o arquivo");
+    } finally {
+      saida.close();
+      try {
+        file.close();
+      } catch (IOException e) {
+        logger.error("Erro ao fechar o arquivo");
+      }
     }
 
-    public ProdutoResponseDTO desativarProduto(Integer idProduto) {
-        Produto produto = repository.findById(idProduto)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Produto não encontrado com o ID: " + idProduto));
-        produto.setProdutoAtivo(false);
-        Produto produtoDesativado = repository.save(produto);
-        return montarProdutoResponseDTO(produtoDesativado, produto.getMateriaisProduto().stream()
-                .map(mp -> new MaterialProdutoRequestDTO(mp.getMaterial().getIdMaterial(), mp.getQtdMaterialNecessario()))
-                .collect(Collectors.toList()));
+  }
+
+  public ProdutoResponseDTO buscarProdutoPorNomePesquisaBinaria(String nome) {
+    List<Produto> produtos = repository.findAll();
+
+    produtos.sort(Comparator.comparing(Produto::getNome));
+
+    return buscarProdutoRecursivo(produtos, nome, 0, produtos.size() - 1);
+  }
+
+  private ProdutoResponseDTO buscarProdutoRecursivo(List<Produto> produtos, String nome, int inicio, int fim) {
+    if (inicio > fim) {
+      return null;
     }
 
-    public MercadoLivreProdutoResponseDTO[] ordenarProdutosMercadoLivrePrecoDecrescente() throws Exception {
-        String urlApiExterna = "https://api.mercadolibre.com/sites/MLB/search?q=produtos-personalizados";
+    int meio = (inicio + fim) / 2;
+    Produto produtoMeio = produtos.get(meio);
 
-        RestTemplate restTemplate = new RestTemplate();
-        ResponseEntity<String> response = restTemplate.getForEntity(urlApiExterna, String.class);
+    int comparacao = produtoMeio.getNome().compareTo(nome);
 
-        ObjectMapper mapper = new ObjectMapper();
-        JsonNode jsonResponse = mapper.readTree(response.getBody());
+    if (comparacao == 0) {
+      return mapper.toResponseDTO(produtoMeio);
+    } else if (comparacao < 0) {
+      return buscarProdutoRecursivo(produtos, nome, meio + 1, fim);
+    } else {
+      return buscarProdutoRecursivo(produtos, nome, inicio, meio - 1);
+    }
+  }
 
-        List<MercadoLivreProdutoResponseDTO> produtos = new ArrayList<>();
+  public void atualizarCategoriaSubcategoriaDoProduto(ProdutosUpdateRequestDTO dto) {
 
-        JsonNode resultsArray = jsonResponse.get("results");
-        if (resultsArray != null && resultsArray.isArray()) {
-            for (JsonNode produtoNode : resultsArray) {
-                MercadoLivreProdutoResponseDTO produto = new MercadoLivreProdutoResponseDTO();
-
-                produto.setId(produtoNode.get("id").asText());
-                produto.setTitle(produtoNode.get("title").asText());
-                produto.setCategoryId(produtoNode.get("category_id").asText());
-                produto.setCondition(produtoNode.get("condition").asText());
-                produto.setPrice(BigDecimal.valueOf(produtoNode.get("price").asDouble()));
-                produto.setCurrencyId(produtoNode.get("currency_id").asText());
-                produto.setThumbnail(produtoNode.get("thumbnail").asText());
-                produto.setPermalink(produtoNode.get("permalink").asText());
-                produto.setAvailableQuantity(produtoNode.get("available_quantity").asInt());
-
-                produtos.add(produto);
-            }
-        }
-
-        MercadoLivreProdutoResponseDTO[] v = new MercadoLivreProdutoResponseDTO[produtos.toArray().length];
-        produtos.toArray(v);
-        for (int i = 0; i < v.length - 1; i++) {
-            for (int j = i + 1; j < v.length; j++) {
-                if (v[j].getPrice().compareTo(v[i].getPrice()) == 1) {
-                    MercadoLivreProdutoResponseDTO temp = v[i];
-                    v[i] = v[j];
-                    v[j] = temp;
-                }
-            }
-        }
-        return v;
+    List<Produto> produtos = new ArrayList<>();
+    if (dto.getNomesProdutos().size() == 1 & dto.getNomesProdutos().get(0).equals("TODOS")) {
+      produtos = repository.findByCategoria_NomeCategoria(dto.getCategoriaAntiga());
+    } else {
+      produtos = repository.findAllByNomeIn(dto.getNomesProdutos());
     }
 
-    public void exportarCSVListaProdutos(String filePath) {
-        List<Produto> listaProdutos = repository.findAll();
+    Categoria categoria = categoriaService.findByNome(dto.getNomeCategoria());
+    Subcategoria subcategoria = subcategoriaService.findByNome(dto.getNomeSubcategoria());
 
-        FileWriter file = null;
-        Formatter saida = null;
+    produtos.forEach(produto -> {
+      produto.setCategoria(categoria);
+      produto.setSubcategoria(subcategoria);
+    });
 
+    repository.saveAll(produtos);
+  }
 
-        try {
-            file = new FileWriter(filePath);
-            saida = new Formatter(file);
+  public ProdutoResponseDTO buscarProdutoPorNome(String nomeProduto) {
+    logger.info("Buscando produto pelo nome: {}", nomeProduto);
 
-            saida.format("%s;%s;%s;%s;%s;%s\n", "id", "nome", "preço", "dimensão", "categoria", "subcategoria");
+    Produto produto = repository.findByNome(nomeProduto)
+            .orElse(null);
 
-            for (Produto produto : listaProdutos) {
-                saida.format("%d;%s;%.2f;%s;%s;%s\n", produto.getId(), produto.getNome(), produto.getPreco(), produto.getDimensao(), produto.getCategoria().getNomeCategoria(), produto.getSubcategoria().getNomeSubcategoria());
-            }
-        } catch (Exception e) {
-            logger.error("Erro ao gravar o arquivo");
-        } finally {
-            saida.close();
-            try {
-                file.close();
-            } catch (IOException e) {
-                logger.error("Erro ao fechar o arquivo");
-            }
-        }
-
+    if (produto == null) {
+      logger.warn("Produto com nome '{}' não encontrado.", nomeProduto);
+      return null;
     }
 
-    public ProdutoResponseDTO buscarProdutoPorNomePesquisaBinaria(String nome) {
-        List<Produto> produtos = repository.findAll();
+    return mapper.toResponseDTO(produto);
+  }
 
-        produtos.sort(Comparator.comparing(Produto::getNome));
+  public Page<ProdutoResponseDTO> buscarPorNomeOuSku(String pesquisa, Pageable pageable) {
+    return repository.findByNomeContainingIgnoreCaseOrSkuContainingIgnoreCase(pesquisa, pesquisa, pageable)
+            .map(produto -> montarProdutoResponseDTO(produto, produto.getMateriaisProduto().stream()
+                    .map(mp -> new MaterialProdutoRequestDTO(mp.getMaterial().getIdMaterial(), mp.getQtdMaterialNecessario()))
+                    .collect(Collectors.toList())));
+  }
 
-        return buscarProdutoRecursivo(produtos, nome, 0, produtos.size() - 1);
+  public ResponseEntity sugerirProdutos(PedidoRequestDTO pedido) {
+
+    List<ItemPedidoRequestDTO> itensCarrinho = pedido.getItens();
+
+    if (itensCarrinho.isEmpty()) {
+      return ResponseEntity.noContent().build();
     }
 
-    private ProdutoResponseDTO buscarProdutoRecursivo(List<Produto> produtos, String nome, int inicio, int fim) {
-        if (inicio > fim) {
-            return null;
-        }
+    List<Produto> produtos = repository.findAllByIdIn(itensCarrinho.stream()
+            .map(ItemPedidoRequestDTO::getFkProduto)
+            .toList());
 
-        int meio = (inicio + fim) / 2;
-        Produto produtoMeio = produtos.get(meio);
-
-        int comparacao = produtoMeio.getNome().compareTo(nome);
-
-        if (comparacao == 0) {
-            return mapper.toResponseDTO(produtoMeio);
-        } else if (comparacao < 0) {
-            return buscarProdutoRecursivo(produtos, nome, meio + 1, fim);
-        } else {
-            return buscarProdutoRecursivo(produtos, nome, inicio, meio - 1);
-        }
+    if (produtos.isEmpty()) {
+      logger.warn("Nenhum produto encontrado.");
+      return ResponseEntity.noContent().build();
     }
 
-    public void atualizarCategoriaSubcategoriaDoProduto(ProdutosUpdateRequestDTO dto) {
+    List<Categoria> categorias = produtos.stream()
+            .map(Produto::getCategoria)
+            .filter(Objects::nonNull)
+            .distinct()
+            .toList();
 
-        List<Produto> produtos = new ArrayList<>();
-        if (dto.getNomesProdutos().size() == 1 & dto.getNomesProdutos().get(0).equals("TODOS")) {
-            produtos = repository.findByCategoria_NomeCategoria(dto.getCategoriaAntiga());
-        } else {
-            produtos = repository.findAllByNomeIn(dto.getNomesProdutos());
-        }
+    List<Subcategoria> subcategorias = produtos.stream()
+            .map(Produto::getSubcategoria)
+            .filter(Objects::nonNull)
+            .distinct()
+            .toList();
 
-        Categoria categoria = categoriaService.findByNome(dto.getNomeCategoria());
-        Subcategoria subcategoria = subcategoriaService.findByNome(dto.getNomeSubcategoria());
-
-        produtos.forEach(produto -> {
-            produto.setCategoria(categoria);
-            produto.setSubcategoria(subcategoria);
-        });
-
-        repository.saveAll(produtos);
+    if (categorias.isEmpty() && subcategorias.isEmpty()) {
+      logger.warn("Nenhuma categoria ou subcategoria encontrada.");
+      return ResponseEntity.noContent().build();
     }
 
-    public ProdutoResponseDTO buscarProdutoPorNome(String nomeProduto) {
-        logger.info("Buscando produto pelo nome: {}", nomeProduto);
+    List<Produto> produtosSugeridos = repository.findByCategoriaInOrSubcategoriaIn(categorias, subcategorias, PageRequest.of(0, 10))
+            .getContent();
 
-        Produto produto = repository.findByNome(nomeProduto)
-                .orElse(null);
-
-        if (produto == null) {
-            logger.warn("Produto com nome '{}' não encontrado.", nomeProduto);
-            return null;
-        }
-
-        return mapper.toResponseDTO(produto);
+    if (produtosSugeridos.isEmpty()) {
+      logger.warn("Nenhum produto sugerido encontrado.");
+      return ResponseEntity.noContent().build();
     }
 
-    public Page<ProdutoResponseDTO> buscarPorNomeOuSku(String pesquisa, Pageable pageable) {
-        return repository.findByNomeContainingIgnoreCaseOrSkuContainingIgnoreCase(pesquisa, pesquisa, pageable)
-                .map(produto -> montarProdutoResponseDTO(produto, produto.getMateriaisProduto().stream()
-                        .map(mp -> new MaterialProdutoRequestDTO(mp.getMaterial().getIdMaterial(), mp.getQtdMaterialNecessario()))
-                        .collect(Collectors.toList())));
-    }
+    return ResponseEntity.ok(produtosSugeridos.stream().map(mapper::toResponseDTO).toList());
+  }
 
-    public ResponseEntity sugerirProdutos(PedidoRequestDTO pedido) {
+  public Page<ProdutoRevisaoResponseDTO> buscarProdutosPrecoAtualizadoNovoCustoAdicional(Double novoCusto, Pageable pageable) {
+    Page<Produto> produtosPage = repository.findAll(pageable);
+    List<ProdutoRevisaoResponseDTO> produtos = produtosPage.getContent().stream().map(produto -> {
+      ProdutoRevisaoResponseDTO dto = new ProdutoRevisaoResponseDTO();
+      dto.setNomeProduto(produto.getNome());
+      dto.setPrecoNovo(calculaPrecoService.calcularPrecoNovoCustoOutro(produto, novoCusto));
+      dto.setPrecoAntigo(produto.getPreco());
+      return dto;
+    }).collect(Collectors.toList());
 
-        List<ItemPedidoRequestDTO> itensCarrinho = pedido.getItens();
+    return new PageImpl<>(produtos, pageable, produtosPage.getTotalElements());
+  }
 
-        if (itensCarrinho.isEmpty()) {
-            return ResponseEntity.noContent().build();
-        }
+  public Page<ProdutoRevisaoResponseDTO> buscarProdutosPrecoAtualizadoSemCustoOutros(Integer idCustoOutro, Pageable pageable) {
+    CustoOutros custoOutro = custoOutrosService.findById(idCustoOutro);
+    Page<Produto> produtosPage = repository.findAll(pageable);
+    List<ProdutoRevisaoResponseDTO> produtos = produtosPage.getContent().stream().map(produto -> {
+      ProdutoRevisaoResponseDTO dto = new ProdutoRevisaoResponseDTO();
+      dto.setNomeProduto(produto.getNome());
+      dto.setPrecoNovo(calculaPrecoService.calcularSemCustoOutro(produto, custoOutro));
+      dto.setPrecoAntigo(produto.getPreco());
+      return dto;
+    }).collect(Collectors.toList());
 
-        List<Produto> produtos = repository.findAllByIdIn(itensCarrinho.stream()
-                .map(ItemPedidoRequestDTO::getFkProduto)
-                .toList());
+    return new PageImpl<>(produtos, pageable, produtosPage.getTotalElements());
+  }
 
-        if (produtos.isEmpty()) {
-            logger.warn("Nenhum produto encontrado.");
-            return ResponseEntity.noContent().build();
-        }
+  public Page<ProdutoRevisaoResponseDTO> buscarProdutosPrecoAtualizadoCustoOutrosEditado(Integer idCustoOutro, Double novoCusto, Pageable pageable) {
+    CustoOutros custoOutro = custoOutrosService.findById(idCustoOutro);
+    custoOutro.setValor(novoCusto);
+    Page<Produto> produtosPage = repository.findAll(pageable);
+    List<ProdutoRevisaoResponseDTO> produtos = produtosPage.getContent().stream().map(produto -> {
+      ProdutoRevisaoResponseDTO dto = new ProdutoRevisaoResponseDTO();
+      dto.setNomeProduto(produto.getNome());
+      dto.setPrecoNovo(calculaPrecoService.calcularPrecoComCustoOutroEditado(produto, custoOutro));
+      dto.setPrecoAntigo(produto.getPreco());
+      return dto;
+    }).collect(Collectors.toList());
 
-        List<Categoria> categorias = produtos.stream()
-                .map(Produto::getCategoria)
-                .filter(Objects::nonNull)
-                .distinct()
-                .toList();
+    return new PageImpl<>(produtos, pageable, produtosPage.getTotalElements());
+  }
 
-        List<Subcategoria> subcategorias = produtos.stream()
-                .map(Produto::getSubcategoria)
-                .filter(Objects::nonNull)
-                .distinct()
-                .toList();
+  public Page<ProdutoRevisaoResponseDTO> buscarProdutosPrecoAtualizadoProjecaoVendasAlterada(
+          Double novaProjecaoVendas, Pageable pageable) {
 
-        if (categorias.isEmpty() && subcategorias.isEmpty()) {
-            logger.warn("Nenhuma categoria ou subcategoria encontrada.");
-            return ResponseEntity.noContent().build();
-        }
+    ParametroGeral parametroGeral = new ParametroGeral();
+    parametroGeral.setValor(String.valueOf(novaProjecaoVendas));
 
-        List<Produto> produtosSugeridos = repository.findByCategoriaInOrSubcategoriaIn(categorias, subcategorias, PageRequest.of(0, 10))
-                .getContent();
+    return repository.findAll(pageable).map(produto -> {
+      ProdutoRevisaoResponseDTO revisao = new ProdutoRevisaoResponseDTO();
+      revisao.setNomeProduto(produto.getNome());
+      revisao.setPrecoAntigo(produto.getPreco());
+      produto.setPreco(calculaPrecoService.calcularPrecoProdutoProjecaoVendaEditada(produto, parametroGeral));
+      revisao.setPrecoNovo(produto.getPreco());
+      return revisao;
+    });
+  }
 
-        if (produtosSugeridos.isEmpty()) {
-            logger.warn("Nenhum produto sugerido encontrado.");
-            return ResponseEntity.noContent().build();
-        }
-
-        return ResponseEntity.ok(produtosSugeridos.stream().map(mapper::toResponseDTO).toList());
-    }
 
 }
